2024-02-24T08:09:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8029266721 # 145
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 308 1074 / 311 1081
* notice: next accum: outdated-unq outdated-all / unq all: 308 1074 / 312 1083
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-24]

2024-02-21T16:11:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7992108920 # 137
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 308 1074 / 310 1079
* notice: next accum: outdated-unq outdated-all / unq all: 308 1074 / 311 1081
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-21]

2024-02-21T00:39:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7982123726 # 135
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 305 1064 / 309 1076
* notice: next accum: outdated-unq outdated-all / unq all: 308 1074 / 310 1079
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2024-02-06 2024-02-07] / [2024-02-20]

2024-02-18T08:10:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7947625232 # 127