@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-24T08:09:41Z",
+  "timestamp" : "2024-02-27T00:38:14Z",
   "count_outdated" : 1074,
   "uniques_outdated" : 308,
-  "count" : 1083,
-  "uniques" : 312,
+  "count" : 1085,
+  "uniques" : 313,
   "views" : [
     {
       "timestamp": "2024-02-18T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-02-24T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-26T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
