@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 4,
+  "count": 11,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2024-02-18T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2024-02-24T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-26T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
