@@ -1,3 +1,12 @@
+2024-02-27T00:38:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8057710148 # 153
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-27
+* notice: last 14d: unq all: 5 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 308 1074 / 312 1083
+* notice: next accum: outdated-unq outdated-all / unq all: 308 1074 / 313 1085
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-02-26]
+
 2024-02-24T08:09:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8029266721 # 145
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
